# moveo_ros

./: README.md
moveo_control/: CMakeLists.txt  package.xml
moveo_control/config/: control.yaml
moveo_control/launch/: moveo_control.launch
moveo_gazebo/: CMakeLists.txt  package.xml
moveo_gazebo/launch/: moveo_gazebo.launch  moveo_gazebo_vision.launch
moveo_gazebo/models/coke_can_slim/: coke_can_slim.sdf
moveo_gazebo/models/coke_can_slim/material/textures/: amazon_can_slim
moveo_gazebo/models/table_short/: model.config  table.sdf
moveo_gazebo/models/table_small/: model.config  table.sdf
moveo_gazebo/models/wood_object/: model.sdf
moveo_gazebo/worlds/: tabletop_cube.world
moveo_grasping/: CMakeLists.txt  package.xml
moveo_grasping/config/: moveo_grasp_data.yaml
moveo_grasping/launch/: grasp_generator_server.launch  start_drivers.launch
moveo_grasping/scripts/: base_test.py  base_test_first.py  base_test_real.py  fetch.py  geometry_msgs.msg  moveLeft.py  moveRight.py  moveit_msgs.msg  planLeft.py  reset.py  spawn_box.py  spawn_can.py
moveo_grasping/scripts/Untitled Folder/: adv_grasp.py  base_test2.py  basic_grasp.py  location.py  pick.py  pick_and_place.py  pickupgoal.py
moveo_grasping/scripts/simulation1/: pick_client.py  pick_server.py  set_scene.py
moveo_interface/: CMakeLists.txt  package.xml
moveo_interface/launch/: arm.launch
moveo_interface/scripts/: arm.py
moveo_kinect/: CMakeLists.txt  package.xml
moveo_kinect/launch/: display.launch  kinect.launch
moveo_kinect/urdf/: moveo_kinect.urdf
moveo_moveit/: CMakeLists.txt  package.xml
moveo_moveit/moveo_moveit_arduino/: moveo_moveit_arduino.ino
moveo_moveit/msg/: ArmJointArray.msg
moveo_moveit_config/: .setup_assistant  package.xml
moveo_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  moveo_urdf.srdf  ompl_planning.yaml  pid.yaml  ros_controllers.yaml  sensors_3d.yaml
moveo_moveit_config/launch/: base_demo.launch  chomp_planning_pipeline.launch.xml  demo.launch  demo_planning_execution.launch  demo_vision.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  moveo_move_group.launch  moveo_trajectory_execution.launch.xml  moveo_urdf_moveit_controller_manager.launch.xml  moveo_urdf_moveit_sensor_manager.launch.xml  ompl_planning_pipeline.launch.xml  physical_demo.launch  planning_context.launch  ros_controllers.launch  sensor_demo.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
moveo_urdf/: package.xml  urdf.rviz
moveo_urdf/meshes/: Gripper_Idol_Gear.STL  Gripper_Idol_Gear_col.STL  Gripper_Servo_Gear.STL  Gripper_Servo_Gear_col.STL  Link_1_col.STL  Link_1_edited.STL  Link_2_col.STL  Link_2_edited.STL  Link_3_col.STL  Link_3_edited.STL  Link_4_col.STL  Link_4_edited.STL  Link_5_col.STL  Link_5_edited.STL  Pivot_Arm_Gripper_Idol.STL  Pivot_Arm_Gripper_Idol_col.STL  Pivot_Arm_Gripper_Servo.STL  Pivot_Arm_Gripper_Servo_col.STL  Tip_Gripper_Idol.STL  Tip_Gripper_Idol_col.STL  base_link.STL  (+5 more)
moveo_urdf_ikfast_arm_plugin/: CMakeLists.txt  moveo_urdf_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
object_recognition/: CMakeLists.txt  package.xml
(+4 files in other folders)
